--- a/config-example.json
+++ b/config-example.json
@@ -2,6 +2,8 @@
     "telegram-token": "YOUR_TOKEN",
     "teamcity-url": "TC_URL",
     "unit-tests-build-type": "BUILD_ID_FOR_UNIT_TESTS",
+    "default-branch": "master",
+    "check-interval-ms": 300000,
     "auth": {
         "username": "username",
         "password": "password"
