--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "axios": "0.15.3",
-    "node-telegram-bot-api": "0.25.0"
+    "axios": "^0.16.1",
+    "node-telegram-bot-api": "^0.27.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
