--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "axios": "^0.16.1",
-    "node-telegram-bot-api": "^0.27.0"
+    "axios": "0.17.0",
+    "lowdb": "1.0.0",
+    "node-telegram-bot-api": "0.29.0"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "mocha": "3.2.0"
+    "chai": "4.1.2",
+    "mocha": "4.0.1"
   }
 }
