Add tc-build-types to config

--- a/config-example.json
+++ b/config-example.json
@@ -8,6 +8,12 @@
         "IF",
         "EMPTY"
     ],
+    "tc-build-types": [
+        "SHOW",
+        "ALL",
+        "IF",
+        "EMPTY"
+    ],
     "default-branch": "master",
     "check-interval-ms": 300000,
     "admin-chat-id": 12345,
