--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Ivan Sosnin <vansosnin@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha ./test/**/*.test.js",
+    "test": "mocha ./test/**/*.test.js && npm run eslint",
+    "eslint": "eslint \"./**/**.js\" --cache",
     "preversion": "yarn test",
     "postversion": "git push && git push --tags"
   },
@@ -19,6 +20,11 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "eslint": "4.10.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "mocha": "4.0.1"
   }
 }
