--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "axios": "0.17.0",
+    "axios": "0.17.1",
+    "cron": "1.3.0",
     "lodash": "4.17.4",
     "lowdb": "1.0.0",
     "node-telegram-bot-api": "0.29.0"
