--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
         "indent": [1, 4, { "VariableDeclarator": { "var": 2, "let": 2, "const": 2 }, "SwitchCase": 1 }],
         "no-underscore-dangle": 0,
         "no-restricted-syntax": 0,
+        "arrow-parens": [2, "always"],
         "comma-dangle": [2, "never"], // todo: fix'n'remove
         "class-methods-use-this": 0 // todo: fix'n'remove
     }
