--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "0.18.0",
     "cron": "1.3.0",
-    "lodash": "4.17.4",
+    "lodash": "4.17.10",
     "lowdb": "1.0.0",
-    "node-telegram-bot-api": "0.29.0"
+    "node-telegram-bot-api": "0.30.0",
+    "winston": "3.0.0-rc6"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -26,6 +27,6 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
-    "mocha": "4.0.1"
+    "mocha": "5.2.0"
   }
 }
