--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     },
     "rules": {
         "indent": [1, 4, { "VariableDeclarator": { "var": 2, "let": 2, "const": 2 }, "SwitchCase": 1 }],
+        "no-continue": 0,
         "no-underscore-dangle": 0,
         "no-restricted-syntax": 0,
         "arrow-parens": [2, "always"],
